/**
* Copyright 2023 Centreon
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
*     http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
*
* For more information : contact@centreon.com
*/

syntax = "proto3";

import "google/protobuf/timestamp.proto";

package com.centreon.broker;



message TimePoint {
  string name = 1;
  string function = 2;
  google.protobuf.Timestamp time = 3;
}


/**
  * @brief the goal of this event is to bench message propagation 
  * from engine to dest with several timepoints (one per muxer)
  *
  */
/*io::extcmd, extcmd::de_pb_bench*/
message Bench {
  uint32 id = 1;
  repeated TimePoint points = 2;
}

